# pdf-extractext

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.db  LICENSE  README.md  docker-compose.app.yml  docker-compose.db.yml  docker-compose.yml  explicacion.md  pyproject.toml
docs/: diagrama-casos-uso.puml
scripts/: mongo-init.js
src/: __init__.py
src/application/: __init__.py
src/application/dtos/: __init__.py  base_dto.py  pdf_dtos.py
src/application/interfaces/: __init__.py  logger_interface.py  pdf_extractor_interface.py
src/application/mappers/: __init__.py  base_mapper.py  registro_procesamiento_mapper.py
src/application/services/: __init__.py  actualizar_registro_service.py  base_service.py  eliminar_registro_service.py  extraer_texto.py  guardar_registro_service.py  obtener_registro_service.py  pdf_validator.py  procesar_pdf_orchestrator.py
src/application/use_cases/: generar_archivo_txt.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  base_entity.py  documento_pdf.py  file.py  registro_procesamiento.py  text.py
src/domain/exceptions/: __init__.py  domain_exception.py  pdf_exceptions.py
src/domain/repositories/: __init__.py  base_repository.py  registro_procesamiento_repository.py
src/domain/value_objects/: __init__.py  base_value_object.py
src/infrastructure/: __init__.py
src/infrastructure/config/: __init__.py  settings.py
src/infrastructure/external_services/: __init__.py  pypdf_extractor.py
src/infrastructure/logging/: __init__.py  logger.py
src/infrastructure/persistence/: __init__.py  database.py
src/interface/: __init__.py  main.py
src/interface/api/: __init__.py
tests/: __init__.py  test_setup.py  test_verificar_restricciones.py
tests/application/: __init__.py
tests/application/test_dtos/: test_pdf_dtos.py
tests/application/test_services/: test_actualizar_registro_service.py  test_eliminar_registro_service.py  test_extraer_texto.py  test_generar_archivo_txt.py  test_guardar_registro_service.py  test_obtener_registro_service.py  test_procesar_pdf_orchestrator.py  test_verificar_restricciones.py
tests/application/test_use_cases/: test_generar_archivo_txt.py
tests/domain/: __init__.py
tests/domain/test_entities/: test_base_entity.py  test_documento_pdf.py  test_registro_procesamiento.py
tests/domain/test_exceptions/: test_documento_duplicado_exception.py
tests/infrastructure/: __init__.py
tests/interface/: __init__.py  test_health.py
(+17 files in other folders)
