[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-extractext"
version = "0.1.0"
description = "API RESTful construida con FastAPI para extraer texto de un PDF"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["fastapi", "clean-architecture", "api", "rest"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "pymongo>=4.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "ruff>=0.3.0", # Ruff reemplaza a black, isort y flake8
]

[project.scripts]
run = "src.interface.main:main"

[tool.setuptools.packages.find]
where = ["src"]

# ============================================
# Ruff - Linter y Formateador
# ============================================
[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"] # Errores, Pyflakes y orden de Imports (isort)
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ============================================
# mypy - Type checker
# ============================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true

# ============================================
# pytest & Coverage
# ============================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = ["--strict-markers", "-v", "--cov=src", "--cov-report=term-missing"]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*", "*/__init__.py", "*/main.py"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "pass", "raise NotImplementedError", "if TYPE_CHECKING:"]
# fail_under = 80